--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,5 +1,3 @@
 spring.application.name=gateway-service
 server.port=8088
-spring.cloud.discovery.enabled=true
-eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
+spring.config.import=optional:configserver:http://localhost:9999
